# CourseProject_1

./: .coveragerc  .gitignore  README.md  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_services.py  test_utils.py  test_views.py
