[tool.poetry]
name = "courseprojet-1"
version = "0.1.0"
description = ""
authors = ["Андрей <newart525@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"


[tool.poetry.group.develop.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '.git'

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true
exclude = '(venv)'

[tool.coverage]
    [tool.coverage.run]
    omit = [
        # omit anything in a .local directory anywhere
        '*/.local/*',
        '__init__.py',
        'tests/*',
        '*/tests/*',
        # omit anything in a .venv directory anywhere
        '.venv/*'
    ]

[tool.coverage.report]
    skip_empty = true